-> Sjednocen coding style, jmenovite mezery kolem argumentu funkci (nekde byly a nekde ne).
    Duvod: Zvysuje citelnost kodu.
    Prazdne zavorky se neoodeluji od nazvu metody mezerou a mezi nimi se tez nedava mezera.
    	Sice to neni jednotne se zbytkem, ale vypada to mnohem lepe a je jasne k cemu ty zavorky
	patri ve slozitejsich vyrazech.
-> Zmena interface: metoda Configurator.set(...) zmenena na Configurator.setProperty(...)
    Duvod: V prikladu v zadani ukolu bylo explicitne pouzito jmeno setProperty a navic je mnohem
    vystiznejsi nez pouhe "set"
-> V metode setProperty zmeneny nazvy argumentu tak, aby byly expresivnejsi. Nazvy propertyName a
propertyValue jsme chvili zvazovali, ale zavrhli kvuli zbytecnemu opakovani slova "property".
